[package]
name = "didyoumean"
authors = ["Hisbaan Noorani"]
version = "1.1.3"
edition = "2021"
license = "GPL-3.0"
description = "A CLI spelling corrector"
documentation = "https://github.com/hisbaan/didyoumean"
homepage = "https://github.com/hisbaan/didyoumean"
repository = "https://github.com/hisbaan/didyoumean"
readme = "docs/README.md"
keywords = ["levenshtein", "damerau", "edit-distance", "spelling"]
categories = ["command-line-utilities"]

[[bin]]
name = "dym"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
colored = "2.0.0"
cli-clipboard = "0.2.1"
dialoguer = "0.10.1"
indicatif = "0.16.2"
atty = "0.2.14"
dirs = "4.0.0"
reqwest = { version = "0.11.11", features = ["stream"] }
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.21"
phf = { version = "0.11.0", features = ["macros"] }

[build-dependencies]
clap_complete = "3.2.3"
clap_mangen = "0.1.10"
clap = { version = "3.2.13", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
nix = "0.24.2"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "edit_distance"
harness = false
